--- a/data/settings.json
+++ b/data/settings.json
@@ -1,12 +1,12 @@
 {
   "organizer": {
-    "name": "GDG Lviv",
-    "twitter": "gdglviv",
-    "blog": "https://medium.com/gdg-lviv",
-    "url": "http://lviv.gdg.org.ua/"
+    "name": "GDG South-South",
+    "twitter": "gdgsouth-south",
+    "blog": "https://medium.com/gdg-ss",
+    "url": "http://devfestss.tech/"
   },
-  "startDate": "2017-10-013T09:00:00+03:00",
-  "endDate": "2017-10-14T19:00:00+03:00",
+  "startDate": "2018-10-013T09:00:00+03:00",
+  "endDate": "2018-10-14T19:00:00+03:00",
   "webapp": {
     "shortName": "DevFest",
     "themeColor": "#673AB7",
@@ -15,7 +15,7 @@
   "dateFormat": {
     "locale": "en-US"
   },
-  "hashtag": "DevFest17",
+  "hashtag": "DevFestSS",
   "disabledSchedule": false,
   "navigation": [
     {
