--- a/data/settings.json
+++ b/data/settings.json
@@ -8,7 +8,7 @@
   "startDate": "2018-10-013T09:00:00+03:00",
   "endDate": "2018-10-14T19:00:00+03:00",
   "webapp": {
-    "shortName": "DevFest",
+    "shortName": "DevFestSS",
     "themeColor": "#673AB7",
     "backgroundColor": "#673AB7"
   },
@@ -113,9 +113,9 @@
   },
   "location": {
     "label": "Location",
-    "name": "Planeta kino",
-    "city": "Lviv",
-    "short": "Lviv, Ukraine",
+    "name": "Start Innovation Hub",
+    "city": "Uyo",
+    "short": "Akwa-Ibom, Nigeria",
     "address": "36 Shchyretska St, Lviv, Ukraine",
     "pointer": {
       "latitude": 49.809841,
