--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "autotrack": "^2.4.1",
+    "firebase-functions": "^2.0.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
@@ -57,6 +58,9 @@
     "require-uncached": "^1.0.3",
     "sw-precache": "^5.2.0",
     "uglify-es": "^3.3.4"
+  },
+  "resolutions": {
+    "grpc": "^1.12.0"
   },
   "engines": {
     "node": ">=8.9.4"
