--- a/data/settings.json
+++ b/data/settings.json
@@ -1,16 +1,16 @@
 {
   "organizer": {
-    "name": "GDG South-South",
+    "name": "GDG Uyo",
     "twitter": "gdgsouth-south",
-    "blog": "https://medium.com/gdg-ss",
-    "url": "http://devfestss.tech/"
+    "blog": "https://medium.com/gdg-uyo",
+    "url": "meetup.com/GDG-Uyo/"
   },
-  "startDate": "2018-10-013T09:00:00+03:00",
-  "endDate": "2018-10-14T19:00:00+03:00",
+  "startDate": "2018-11-016T10:00:00+03:00",
+  "endDate": "2018-11-17T19:00:00+04:00",
   "webapp": {
     "shortName": "DevFestSS",
-    "themeColor": "#673AB7",
-    "backgroundColor": "#673AB7"
+    "themeColor": "#3F51B5",
+    "backgroundColor": "#3F51B5"
   },
   "dateFormat": {
     "locale": "en-US"
@@ -48,7 +48,7 @@
     "home": {
       "description": "Be a hero. Be a GDG!",
       "background": {
-        "color": "#673ab7",
+        "color": "#354DB7",
         "image": "/images/backgrounds/home.jpg"
       },
       "fontColor": "#FFF"
@@ -116,17 +116,17 @@
     "name": "Start Innovation Hub",
     "city": "Uyo",
     "short": "Akwa-Ibom, Nigeria",
-    "address": "36 Shchyretska St, Lviv, Ukraine",
+    "address": "Start Innovation Hub suite G11 ground floor Ibom e-library,Uyo",
     "pointer": {
-      "latitude": 49.809841,
-      "longitude": 23.972805,
+      "latitude": 5.015090,
+      "longitude": 7.913266,
       "zoom": 5
     },
     "mapCenter": {
-      "latitude": 48,
-      "longitude": 8
+      "latitude": 5.03,
+      "longitude": 7.91
     },
-    "description": "Newly built Pivdennyi Expo is a long-awaited exhibition center in Lviv, which can fulfill the needs of the large-scale event"
+    "description": "DevFest SouthSouth will take place in Uyo - the state capital of Akwa Ibom. Expect huge screens and perfect sound. Everything is set to deliver the best conference experience possible."
   },
   "mediaQueries": {
     "xs": {
@@ -148,15 +148,15 @@
     "follow": [
       {
         "name": "facebook",
-        "url": "https://www.facebook.com/devfest.ukraine/"
+        "url": "https://www.facebook.com/devfest.southsouth/"
       },
       {
         "name": "twitter",
-        "url": "https://twitter.com/devfest_ukraine/"
+        "url": "https://twitter.com/devfest_southsouth/"
       },
       {
         "name": "instagram",
-        "url": "https://www.instagram.com/devfestukraine"
+        "url": "https://www.instagram.com/devfestss"
       },
       {
         "name": "youtube",
@@ -178,7 +178,7 @@
       }
     ]
   },
-  "mailto": "devfest@gdg.org.ua",
+  "mailto": "hello@devfestss.tech",
   "mailchimp": {
     "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
     "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
@@ -221,7 +221,7 @@
       "itemsCount": 6
     },
     "tickets": {
-      "itemsCount": 5
+      "itemsCount": 3
     }
   }
 }
