--- a/data/settings.json
+++ b/data/settings.json
@@ -87,7 +87,7 @@
       "fontColor": "#424242"
     },
     "team": {
-      "title": "Team",
+      "title": "Get to Know the Team",
       "metaDescription": "Get more info about organizers",
       "background": {
         "color": "#fff"
