--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -3,8 +3,8 @@
     "c4p" : {
       "backgroundColor" : "#3647a5",
       "brief" : "GDG DevFest South South was announced, the conference will bring together 1000 developers, managers and...",
-      "content" : "GDG DevFest South South was announced, the conference will bring together 1000 developers, managers and entrepreneurs on **November 16** to Uyo.  This year our team is doing big advancement in the content, we're building an extra stage to accommodate more visitors and provide three fully independent tracks on Android, Web and Google Cloud topics.  Our focus is the content. **We’re looking for speakers like you**, who are ready to rock the stage and deliver the best talk or workshop in the field.  \"I've been to conferences all over the world and what you've created in Lviv is world class. It's easily first league of conferences.\" - Piotr Tuszynski, DevFest '16 Keynote Speaker  <div layout horizontal center-justified> <a href=\"http://bit.ly/df17-c4p\" rel=\"noopener noreferrer\">   <paper-button primary>Submit a proposal</paper-button> </a> </div>  ## Why is it cool to speak at the DevFest?  DevFest Ukraine is not an ordinary tech conference, besides selecting only the best speakers, we help them to succeed in delivering an exceptional quality talk on the stage.  Here are few perks that all our speakers get:  - **Expences covered**. Hotel for 3 nights, travel costs and entrance to exclusive speaker parties are covered for all speakers. - **Professional video recording**. We work with experienced video production companies to create session recording of the best quality. Stage, screen, audio, all is recorded separately and combined later. Check the [session videos from the last year](https://www.youtube.com/watch?v=VOwUnBkqmo4). - **Exposure**. By being a speaker, you are proving your level of expertise to a potential business partners or employers. Your talk will be promoted in our online resources and recording published in YouTube channel with more than 35k views. - **Unique networking**. Being a speaker means you’ll have the unique chance to network with other speakers - the best experts in the industry. - **Coaching**. We're in the same boat, after being selected as a speaker our program committee will help you to deliver the best talk possible. We provide information about the audience, presentation templates, feedback on the slides, all to help you to prepare.  \"It was a best DevFest I ever attended. So professional, so much enthusiasm from the community. You managed to bring the vibe of Google I/O to Ukraine.\" - David Vávra, DevFest '16 Speaker  ## What are we looking for?  We're looking for **experience-based talks**, the information that can not be found in the documentation or easily googled. We're looking for your stories, your struggles, research results and experiences with the frontier tools or technologies. Check the [list of topics](https://docs.google.com/document/d/18eGvBr6wdlXsfiZM4EK6SubfL3G1RWj-ABTBN9pngNg/edit?usp=sharing) we're interested in (it is not full and updated all the time).  ### Format  You can submit as many talks as you want. This year we accept submissions in two formats:   - 40 minutes sessions.   - 2(or 3) hours workshops.  ### Talks that will not pass initial review  - Talks about a specific tool/library/project explaining how it works or how to use it.  - Talks whose focus is pitching a company or project. It’s cool that you mention your company during the presentation, but it shouldn’t be the focus of the talk.  - Proposals that are not in English.  - Recruitment talks to attract talent.  We strongly recommend you check out [speaking.io](http://speaking.io/) website from Zach Holman. It includes good tips and guidelines for speakers.   ## Timeline  **Call for Papers submission deadline is July 1, 2017.** Submission results will be announced by July 16.   Any questions? Email organizers at [devfest@gdg.org.ua](mailto:devfest@gdg.org.ua)  <div layout horizontal center-justified> <a href=\"http://bit.ly/df17-c4p\" rel=\"noopener noreferrer\">   <paper-button primary>Submit a proposal</paper-button> </a> </div>",
-      "image" : "/images/posts/c4p.jpg",
+      "content" : "GDG DevFest South South was announced, the conference will bring together 1000 developers, managers and entrepreneurs on **November 16** to Uyo.  This year our team is doing big advancement in the content, we're building an extra stage to accommodate more visitors and provide three fully independent tracks on Android, Web and Google Cloud topics and introducing AI, ML and Data Science.  Our focus is the content. **We’re looking for speakers like you**, who are ready to rock the stage and deliver the best talk or workshop in the field.  <div layout horizontal center-justified> <a href=\"#\" rel=\"noopener noreferrer\">   <paper-button primary>Submit a proposal</paper-button> </a> </div>  ## Why is it cool to speak at the DevFest?  DevFest South South is not an ordinary tech conference, besides selecting only the best speakers, we help them to succeed in delivering an exceptional quality talk on the stage.  Here are few perks that all our speakers get:  - **Expences covered**. Hotel for 3 nights, travel costs and entrance to exclusive speaker parties are covered for all speakers. - **Professional video recording**. We work with experienced video production companies to create session recording of the best quality. Stage, screen, audio, all is recorded separately and combined later. Check the [session videos from the last year](https://www.youtube.com/watch?v=VOwUnBkqmo4). - **Exposure**. By being a speaker, you are proving your level of expertise to a potential business partners or employers. Your talk will be promoted in our online resources and recording published in YouTube channel with more than 35k views. - **Unique networking**. Being a speaker means you’ll have the unique chance to network with other speakers - the best experts in the industry. - **Coaching**. We're in the same boat, after being selected as a speaker our program committee will help you to deliver the best talk possible. We provide information about the audience, presentation templates, feedback on the slides, all to help you to prepare.  \"It was a best DevFest I ever attended. So professional, so much enthusiasm from the community. You managed to bring the vibe of Google I/O to Ukraine.\" - David Vávra, DevFest '16 Speaker  ## What are we looking for?  We're looking for **experience-based talks**, the information that can not be found in the documentation or easily googled. We're looking for your stories, your struggles, research results and experiences with the frontier tools or technologies. Check the [list of topics](https://docs.google.com/document/d/18eGvBr6wdlXsfiZM4EK6SubfL3G1RWj-ABTBN9pngNg/edit?usp=sharing) we're interested in (it is not full and updated all the time).  ### Format  You can submit as many talks as you want. This year we accept submissions in two formats:   - 40 minutes sessions.   - 2(or 3) hours workshops.  ### Talks that will not pass initial review  - Talks about a specific tool/library/project explaining how it works or how to use it.  - Talks whose focus is pitching a company or project. It’s cool that you mention your company during the presentation, but it shouldn’t be the focus of the talk.  - Proposals that are not in English.  - Recruitment talks to attract talent.  We strongly recommend you check out [speaking.io](http://speaking.io/) website from Zach Holman. It includes good tips and guidelines for speakers.   ## Timeline  **Call for Papers submission deadline is July 1, 2017.** Submission results will be announced by July 16.   Any questions? Email organizers at [devfest@gdg.org.ua](mailto:devfest@gdg.org.ua)  <div layout horizontal center-justified> <a href=\"http://bit.ly/df17-c4p\" rel=\"noopener noreferrer\">   <paper-button primary>Submit a proposal</paper-button> </a> </div>",
+      "image" : "/images/posts/devfestss.jpeg",
       "published" : "2018-09-19",
       "source" : "/data/posts/2017-02-12-c4p.md",
       "title" : "We're looking for speakers"
@@ -545,7 +545,7 @@
         }
       ],
       "bio" : "Country Mentor Google Developer Groups Nigeria. CEO Start Innovation Hub. A tech entrepreneur whose dream is to save the world with a click. http://www.hanson.com.ng ",
-      "company" : "Widespread",
+      "company" : "Start Innovation Hub",
       "companyLogo" : "/images/logos/starthub.svg",
       "companyLogoUrl" : "",
       "country" : "Uyo, Nigeria",
@@ -589,13 +589,38 @@
         "name" : "Twitter"
       } ],
       "title" : "Certified Android Developer"
+    },
+    "judeebene": {
+      "bio": "Entrepreneur and Co-Founder at #ShareQube, Software Developer, Deep learning enthusiast, Under30CEO. Software Developer @pillarProject",
+      "company": "ShareQube",
+      "companyLogo": "",
+      "companyLogoUrl": "",
+      "country": "London",
+      "featured": true,
+      "name": "Jude Ben",
+      "photo": "/images/people/jude_ben.jpg",
+      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Fjudeben.jpeg?alt=media&token=9cf1a0d1-4fca-4f14-9d0b-cce6799a81b5",
+      "shortBio": "Co-Founder at #ShareQube, Software Developer, Deep learning enthusiast",
+      "socials": [
+        {
+          "icon": "gplus",
+          "link": "#",
+          "name": "Google+"
+        },
+        {
+          "icon": "twitter",
+          "link": "https://twitter.com/judeebene",
+          "name": "Twitter"
+        }
+      ],
+      "title": "Deep learning enthusiast"
     }
   },
   "team" : [ {
     "members" : [ {
       "name" : "Nsikak Thomposon",
       "photo" : "/images/people/nsikak.jpg",
-      "photoUrl": "",
+      "photoUrl": "https://pbs.twimg.com/profile_images/1002946069054017536/WTh4NQcs_400x400.jpg",
       "socials" : [ {
         "icon" : "facebook",
         "link" : "https://www.facebook.com/#",
@@ -605,11 +630,11 @@
         "link" : "https://twitter.com/thompson_nsikak",
         "name" : "Twitter"
       }],
-      "title" : "Website and Organizer"
+      "title" : "General Organizing"
     },{
       "name" : "Wisdom Anthony",
       "photo" : "/images/people/wisdomanthoni.jpg",
-      "photoUrl" : "",
+      "photoUrl" : "https://pbs.twimg.com/profile_images/906989089911648259/8rZ-G_ZH_400x400.jpg",
       "socials" : [ {
         "icon" : "gplus",
         "link" : "#",
