--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -13,7 +13,7 @@
       "backgroundColor" : "#2196F3",
       "brief" : "It is official. GDG DevFest South South 2018 is going to take place in Uyo, on November 16",
       "content" : "It is official. GDG DevFest South South 2018 is going to take place in **Uyo, on November 16**.  Described by many as \"Google I/O of Ukraine\", DevFest has grown from the small 100-people event to the biggest Google tech conference in the Central and Eastern Europe. This year, we expect over 900 engineers, managers, and entrepreneurs from over 20 countries come to DevFest to learn about Android, Web and Cloud technologies, and to experience the phenomenal atmosphere.  ## What to expect?  **3 parallel Tracks and Workshops Area.** You asked, we did. We're building an additional stage and expanding Workshops Area to highlight even more topics and provide more hands-on time.  **Only experience based presentations.** Speakers from product companies like Google, Intel, Amazon, and Twilio. We take talk selection seriously. Our program committee carefully screens each and every submission.  **Expo Area.** Smart home, IoT, AR/VR devices, face emotions recognition using Google Cloud. Interested? With the help of GDG groups from all around Ukraine, DevFest is going to feature the biggest Expo Area on Google related devices and technologies.  **Unique networking and party.** Network with other like-minded industry colleagues and DevFest partners throughout the event and after-party.  <div layout horizontal center-justified> <a href=\"https://2event.com/events/800690\" rel=\"noopener noreferrer\">   <paper-button primary>Buy ticket</paper-button> </a> </div>   ## Stay in touch  We've already got first confirmations from speakers from Google, Twilio and Telerik. Subscribe to [DevFest newsletter](https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe) or follow us on [Facebook](https://www.facebook.com/devfest.ukraine/), [Twitter](https://twitter.com/devfest_ukraine) and [Instagram](https://www.instagram.com/devfestukraine) not to miss new speakers announcements and conference updates.   <span><i> We can't wait to meet you in Lviv, the rising tech capital of Ukraine.</br> GDG DevFest Ukraine Team. </i></span>",
-      "image" : "/images/posts/devfestss.jpeg",
+      "image" : "/images/logos/gdg-uyo.svg",
       "published" : "2018-09-06",
       "source" : "/data/posts/2017-02-06-dfua17-announced.md",
       "title" : "Announcing GDG DevFest South South 2018"
@@ -50,26 +50,30 @@
   },
   "partners" : [ {
     "logos" : [ {
-      "logoUrl" : "../images/logos/gdg-lviv.svg",
+      "logoUrl" : "../images/logos/gdg-uyo.svg",
       "name" : "GDG Uyo",
-      "url" : "https://plus.google.com/102444623953913144164"
+      "url" : "https://meetup.com/GDG-Uyo/"
     } ],
-    "title" : "Organizers"
+    "title" : "Organizer"
   }, {
     "logos" : [ {
       "logoUrl" : "../images/logos/google.svg",
       "name" : "Google",
       "url" : "https://www.google.com.ng/intl/en/about/"
     }, {
-      "logoUrl" : "../images/logos/gdg-x.svg",
-      "name" : "GDG[x]",
-      "url" : "https://github.com/gdg-x"
+      "logoUrl" : "../images/logos/gdg-bonny.svg",
+      "name" : "GDG Bonny",
+      "url" : "#"
     }, {
-      "logoUrl" : "../images/logos/google.svg",
-      "name" : "Google",
-      "url" : "https://www.google.com.ng/intl/en/about/"
+      "logoUrl": "../images/logos/gdg-calabar.svg",
+      "name": "GDG Calabar",
+      "url": "#"
+    },{
+      "logoUrl" : "../images/logos/gdg-ph.svg",
+      "name" : "Google PH",
+      "url" : "#"
     } ],
-    "title" : "General Partner"
+    "title" : "GDG Support"
   } ],
   "schedule" : {
     "2018-11-16" : {
