--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -691,16 +691,36 @@
   } ],
   "tickets" : [  {
     "available" : true,
-    "currency": "",
+    "currency": "₦",
     "ends": "Nov 01",
     "inDemand": true,
-    "info": "Get a ticket",
-    "name": "Get a Ticket",
-    "price": 0,
+    "info": "Get Branded Jotter Requires valid student ID",
+    "name": "STUDENT",
+    "price": "500",
+    "soldOut": false,
+    "starts": "Sep 15",
+    "url": "/ticket/student"
+  },{
+    "available": true,
+    "currency": "₦",
+    "info": "Money worth nothing when you love it ... Get Branded T-shirts",
+    "name": "I Love DFSS",
+    "price": "2000",
+    "soldOut": false,
+    "url": "/ticket/love-dfss"
+  }, {
+    "available": true,
+    "currency": "₦",
+    "ends": "Nov 01",
+    "inDemand": true,
+    "info": "Get a Branded Tea Mug",
+    "name": "Regular",
+    "price": "1000",
+    "primary": true,
     "regular": true,
     "soldOut": false,
     "starts": "Sep 15",
-    "url": "https://www.meetup.com/GDG-Uyo/events/254550307/"
+    "url": "/ticket/regular"
   }
 ],
   "triggers" : {
