--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "autotrack": "^2.4.1",
     "firebase-functions": "^2.0.5",
+    "nodemailer": "^4.6.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
