--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "md5": "^2.2.1",
     "mkdirp-promise": "^5.0.1",
     "moment": "^2.22.0",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.54",
