all work and no play makes ghost scary

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -400,7 +400,7 @@
           "name": "gdg"
         }
       ],
-      "bio" : "Country Mentor Google Developer Groups Nigeria. CEO Start Innovation Hub. A tech entrepreneur whose dream is to save the world with a click. http://www.hanson.com.ng ",
+      "bio" : "Country Mentor Google Developer Groups Nigeria. CEO Start Innovation Hub. A tech entrepreneur whose dream is to save the world with a click.  ",
       "company" : "Start Innovation Hub",
       "companyLogo" : "/images/logos/starthub.svg",
       "companyLogoUrl" : "",
@@ -429,7 +429,7 @@
           "name": "wtm"
         }
       ],
-      "bio" : "Founder/CEO at AfroPot, Certified Android Developer, Google Women Techmakers Lead Uyo, 1st Runner-up NASA International Space Apps Challenge Nigeria.",
+      "bio" : "Founder/CEO at AfroPot, Certified Android Developer, Google Women Techmakers Lead Uyo.",
       "company" : "AfroPot",
       "companyLogo" : "/images/logos/women-tech-maker.svg",
       "companyLogoUrl" : "",
