--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -37,6 +37,16 @@
     "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FIMG_7737.JPG?alt=media&token=4ac98b0f-9972-42f5-81c2-46b3dc4cbd35",
     "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FIMG_7804.JPG?alt=media&token=b0324bb0-de40-4da8-a173-1842436ed766"
   ],
+  "swags": [
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4794.jpg?alt=media&token=b1b129cf-7465-49df-bd10-de8c5ab5cf7f",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4799.jpg?alt=media&token=72f3370c-c5b9-4eeb-a185-efade6c2d864",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4819.jpg?alt=media&token=6d92c9a3-0a36-4269-93f6-ffe252783204",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4819.jpg?alt=media&token=6d92c9a3-0a36-4269-93f6-ffe252783204",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4825.jpg?alt=media&token=f0434a36-69a9-441c-a212-da2fe5a0d7ec",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FGDG_4885.jpg?alt=media&token=84bde9b0-dee3-4268-8378-55f0366d6038",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FIMG_7737.JPG?alt=media&token=4ac98b0f-9972-42f5-81c2-46b3dc4cbd35",
+    "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fgallery%2FIMG_7804.JPG?alt=media&token=b0324bb0-de40-4da8-a173-1842436ed766"
+  ],
   "notifications" : {
     "config" : {
       "icon" : "",
