--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -513,7 +513,7 @@
         "link" : "https://twitter.com/thompson_nsikak",
         "name" : "Twitter"
       }],
-      "title" : "General Organizing"
+      "title" : "General Organizer"
     },{
       "name" : "Wisdom Anthony",
       "photo" : "/images/people/wisdomanthoni.jpg",
