--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -514,7 +514,7 @@
         "link": "https://twitter.com/unicodeveloper",
         "name": "Twitter"
       }],
-      "title": "Principal Developer Advocate"
+      "title": "Developer Advocate"
     }
   },
   "team" : [ {
