--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -518,7 +518,7 @@
         "link": "https://twitter.com/markessien",
         "name": "Twitter"
       }],
-      "title": "CEO, Hotels.ng"
+      "title": "CEO"
     }
   },
   "team" : [ {
